--- a/static/sass/index.scss
+++ b/static/sass/index.scss
@@ -73,15 +73,16 @@ a:hover{
             }
             > li{
                 display: inline-block;
-                > a{
+                >a, >p{
                     display: block;
                     line-height: 90px;
                     letter-spacing: 1px;
                     color: white;
                     padding: 0px 10px 0px 10px;
+                    cursor: pointer;
                     transition: all 300ms;
                 }
-                > a:hover{
+                > a:hover, > p:hover{
                     // transform: scale(1.1,1.1);
                     color: #16E6C0;
                 }
